--- a/layouts/partials/default_header.html
+++ b/layouts/partials/default_header.html
@@ -32,7 +32,7 @@
 						{{ end }}
 					</ul>
 					<ul class="p-navigation__links u-float-right" role="menu">
-						<li class="p-navigation__link"><a target="_blank" href="{{.Site.Params.Wiki_URL}}/edit/site/content/{{$.File.Path}}">Edit</a></li>
+						<li class="p-navigation__link"><a target="_blank" href="{{.Site.Params.Wiki_URL}}/edit/{{.Site.Params.Wiki_Branch}}/{{$.File.Path}}">Edit</a></li>
 					</ul>
 				</nav>
 			</header>
