--- a/layouts/partials/default_header.html
+++ b/layouts/partials/default_header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>{{.Site.Title}}</title>
+		<title>{{.Site.Title}} - {{.Title}}</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="/css/style.css" />
