--- a/layouts/partials/default_header.html
+++ b/layouts/partials/default_header.html
@@ -28,7 +28,7 @@
 		<div id="app">
 			<header id="navigation" class="p-navigation">
 				<div class="p-navigation__logo">
-					<a class="p-navigation__link" href="/">Card10</a>
+					<a class="p-navigation__link" href="/">card10</a>
 				</div>
 				<div class="p-navigation__banner">
 					<a href="#navigation" class="p-navigation__toggle--open" title="menu">Menu</a>
