--- a/static/css/own.css
+++ b/static/css/own.css
@@ -1,3 +1,7 @@
+body {
+	background-color: #f3f3f3;
+}
+
 .p-navigation__logo {
 	font-size: 1.5rem;
 	line-height: 3rem;
@@ -14,6 +18,22 @@
 }
 #app > .p-content {
 	flex: 10 auto;
+	border: solid #eeeeee;
+	border-width: 1px 1px 0.2em;
+	box-shadow: 0 1px 2px 1px rgba(0,0,0,0.02);
+	background-color: #ffffff;
+	padding: 1em 2em 3em;
+}
+.p-aside__section {
+	background: #fcfcfc;
+	border: solid #eeeeee;
+	border-width: 1px 1px 0.2em;
+	box-shadow: 0 1px 2px 1px rgba(0,0,0,0.02);
+	padding: 1.5em 1.5em 0;
+}
+.p-aside__header {
+	padding-bottom: 0.5em;
+	border-bottom: solid 2px #cccccc;
 }
 @media (max-width: 800px) {
 	#app {
