--- a/layouts/partials/default_header.html
+++ b/layouts/partials/default_header.html
@@ -27,7 +27,7 @@
 	<body>
 		<div id="app">
 			<header id="navigation" class="p-navigation">
-				<div class="p-navigation__logo">
+				<div class="p-navigation__links logo">
 					<a class="p-navigation__link" href="/">card10</a>
 				</div>
 				<div class="p-navigation__banner">
@@ -49,7 +49,7 @@
 						{{ end }}
 					</ul>
 					<ul class="p-navigation__links u-float-right" role="menu">
-						<li class="p-navigation__link"><a target="_blank" href="{{.Site.Params.Wiki_URL}}/edit/{{.Site.Params.Wiki_Branch}}/{{$.File.Path}}">Edit</a></li>
+						<li class="p-navigation__link edit"><a target="_blank" href="{{.Site.Params.Wiki_URL}}/edit/{{.Site.Params.Wiki_Branch}}/{{$.File.Path}}">Edit</a></li>
 					</ul>
 				</nav>
 			</header>
