--- a/static/css/own.css
+++ b/static/css/own.css
@@ -2,10 +2,6 @@ body {
 	background-color: #f3f3f3;
 }
 
-.p-navigation__logo {
-	font-size: 1.5rem;
-	line-height: 3rem;
-}
 #app {
 	display: flex;
 	flex-flow: row wrap;
@@ -30,11 +26,35 @@ body {
 	border-width: 1px 1px 0.2em;
 	box-shadow: 0 1px 2px 1px rgba(0,0,0,0.02);
 	padding: 1.5em 1.5em 0;
+	margin-bottom: 1em;
 }
 .p-aside__header {
 	padding-bottom: 0.5em;
 	border-bottom: solid 2px #cccccc;
 }
+.p-navigation::after {
+	bottom: 0px;
+	height: 5px;
+	background: #ffc600;
+}
+#navigation > .logo {
+	border-bottom: 6px solid #0076ba;
+	z-index: 2;
+	padding: 0px 50px;
+	font-size: 1.5rem;
+	line-height: 3rem;
+}
+#navigation .edit {
+	font-weight: bold;
+}
+#navigation .edit > a {
+	color: #99ba00;
+}
+#navigation .p-navigation__links.u-float-right {
+	border-bottom: 6px solid #99ba00;
+	z-index: 2;
+}
+
 @media (max-width: 800px) {
 	#app {
 		flex-direction: column;
