--- a/layouts/partials/default_header.html
+++ b/layouts/partials/default_header.html
@@ -4,8 +4,7 @@
 		<title>{{.Site.Title}} - {{.Title}}</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="/css/style.css" />
-		<link rel="stylesheet" href="/css/own.css" />
+		<link rel="stylesheet" href="/css/main.css" />
 		<link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
 		<link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
 		<link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
