--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5736,9 +5736,14 @@ body {
   color: #99ba00;
 }
 
+#navigation .p-navigation__links {
+  width: 33%;
+}
+
 #navigation .p-navigation__links.u-float-right {
   border-bottom: 6px solid #99ba00;
   z-index: 2;
+  flex-direction: row-reverse;
 }
 
 @media (max-width: 800px) {
