--- a/layouts/partials/default_header.html
+++ b/layouts/partials/default_header.html
@@ -38,6 +38,7 @@
 						<a href="#main-content">Jump to main content</a>
 					</span>
 					<ul class="p-navigation__links" role="menu">
+						<li class="p-navigation__link"><a target="_blank" href="https://firmware.card10.badge.events.ccc.de/">Firmware API</a></li>
 					</ul>
 					<ul class="p-navigation__links u-float-right" role="menu">
 						<li class="p-navigation__link edit"><a target="_blank" href="{{.Site.Params.Wiki_URL}}/edit/{{.Site.Params.Wiki_Branch}}/{{$.File.Path}}">Edit</a></li>
