fix in upper menu entry underline

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5715,8 +5715,8 @@ html {
   border-bottom: solid 2px #cccccc;
 }
 
-.p-navigation::after {
-  bottom: 0px;
+.p-navigation::after,
+.p-navigation__link > a::before {
   height: 0px;
   background: transparent;
 }
