--- a/style/main.scss
+++ b/style/main.scss
@@ -39,8 +39,8 @@ html {
 	padding-bottom: 0.5em;
 	border-bottom: solid 2px #cccccc;
 }
-.p-navigation::after {
-	bottom: 0px;
+.p-navigation::after,
+.p-navigation__link > a::before {
 	height: 0px;
 	background: transparent;
 }
