--- a/style/main.scss
+++ b/style/main.scss
@@ -41,8 +41,7 @@ html {
 }
 .p-navigation::after,
 .p-navigation__link > a::before {
-	height: 0px;
-	background: transparent;
+	content: none;
 }
 #navigation > .logo {
 	border-bottom: 6px solid #0076ba;
