hugo: warning -> did not show edit button if source not found

--- a/layouts/partials/default_header.html
+++ b/layouts/partials/default_header.html
@@ -43,7 +43,13 @@
 						{{ end }}
 					</ul>
 					<ul class="p-navigation__links u-float-right" role="menu">
-						<li class="p-navigation__link edit"><a target="_blank" href="{{.Site.Params.Wiki_URL}}/edit/{{.Site.Params.Wiki_Branch}}/{{$.File.Path}}">Edit</a></li>
+						<li class="p-navigation__link edit">
+							{{ with $.File }}
+							<a target="_blank" href="{{$.Site.Params.Wiki_URL}}/edit/{{$.Site.Params.Wiki_Branch}}/{{.Path}}">Edit</a>
+							{{ else }}
+							not source found
+							{{ end }}
+						</li>
 					</ul>
 				</nav>
 			</header>
