--- a/style/main.scss
+++ b/style/main.scss
@@ -39,6 +39,9 @@ html {
 	padding-bottom: 0.5em;
 	border-bottom: solid 2px #cccccc;
 }
+.divider {
+	border-bottom: solid 2px #cccccc;
+}
 .p-navigation::after,
 .p-navigation__link > a::before {
 	content: none;
