--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -13,12 +13,15 @@
 	</div>
 	{{end}}
 	{{range .Sections}}
+	{{if not .Draft}}
 	<div class="p-aside__section">
 		<h4 class="p-aside__header"><a class="p-aside__link" href="{{.Permalink}}">{{.Title}}</a></h4>
 		<nav class="p-aside__nav">
 			<ul class="p-list">
 				{{range .Sections}}
+				{{if not .Draft}}
 				<li><a class="p-aside__link" href="{{.Permalink}}">{{.Title}}</a></li>
+				{{end}}
 				{{end}}
 
 				{{if and (ne (len .Sections) 0) (ne (len .Pages) 0) }}
@@ -26,11 +29,14 @@
 				{{end}}
 
 				{{range .Pages}}
+				{{if not .Draft}}
 				<li><a class="p-aside__link" href="{{.Permalink}}">{{.Title}}</a></li>
+				{{end}}
 				{{end}}
 			</ul>
 		</nav>
 	</div>
+	{{end}}
 	{{end}}
 </aside>
 <div class="p-content">
