--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2240,7 +2240,7 @@ th {
 
 .p-breadcrumbs {
   list-style: none;
-  margin: 0;
+  margin: 0.5em 0 -0.25em 0.7em;
   padding: 0;
   width: 100%;
 }
