try: 404 page with filename

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -3,7 +3,7 @@
 	<h1 class="p-heading--one">404 - NotFound</h1>
 	We like to get offer information:
 	<a href="#" on-click="createPage()">New Page</a><br/>
-	And give the file the name <pre id="filename"></pre> or <pre id="filenameWithFolder"></pre> if you like to create subpages.
+	And give the file the name <code id="filename"></code> or <code id="filenameWithFolder"></code> if you like to create subpages.
 	<script>
 		var path = window.location.pathname;
 		if( path.slice(-1) == "/" ) {
