improve 404 box as caution

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,7 +1,7 @@
 {{ partial "default_header.html" . }}
 <div class="p-content">
 	<h1 class="p-heading--one">404 - NotFound</h1>
-	<div class="p-notification">
+	<div class="p-notification--caution">
 		<p class="p-notification__response">
 			To generate a new page <a href="#" id="filenameHREF">here</a>,
 			if you want to have subpages later please use the filename <code id="filenameWithFolder"></code>
