--- a/layouts/404.html
+++ b/layouts/404.html
@@ -3,9 +3,14 @@
 	<h1 class="p-heading--one">404 - NotFound</h1>
 	<div class="p-notification--caution">
 		<p class="p-notification__response">
-			To generate a new page <a href="#" target="_blank" id="filenameHREF">here</a>,
-			if you want to have subpages later please use the filename <code id="filenameWithFolder"></code>
-			else create the file: <code id="filename"></code>.
+			To generate a new page here, please follow <a href="#" target="_blank" id="filenameHREF">here</a> link and create a file called,
+			<ul>
+				<li><code id="filename"></code> for a single page</li>
+			</ul>
+			or
+			<ul>
+				<li><code id="filenameWithFolder"></code>for a page with subpages</li>
+			</ul>
 		</p>
 	</div> 
 	<script>
